set lai cau truc

--- a/XacThuc/dangnhap.html
+++ b/XacThuc/dangnhap.html
@@ -1,3 +1,38 @@
 <html>
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đăng nhập - Trường mầm non hướng dương</title>
+    <!-- Link tới file CSS -->
+    <link rel="stylesheet" href="dangnhap.css">
+</head>
+
+<body>
+    <div class="login-container">
+        <div class="logo">
+            <img src="https://img.icons8.com/color/48/000000/plant-under-sun.png" alt="logo">
+        </div>
+        <h2>TRƯỜNG MẦM NON HƯỚNG DƯƠNG</h2>
+        <form>
+            <div class="form-group">
+                <input type="email" placeholder="Email">
+            </div>
+            <div class="form-group">
+                <input type="password" placeholder="Mật khẩu">
+            </div>
+            <div class="form-group">
+                <select>
+                    <option value="">Vai trò</option>
+                    <option value="admin">Quản trị viên</option>
+                    <option value="teacher">Giáo viên</option>
+                    <option value="parent">Phụ huynh</option>
+                </select>
+            </div>
+            <a href="#" class="forgot-password">Quên mật khẩu?</a>
+            <button type="submit" class="btn-login">Đăng nhập</button>
+        </form>
+    </div>
+</body>
+
 </html>
