lap trinh header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="script.js"></script>
+
     <title>Trường Tiểu học tương lai</title>
 </head>
 
 <body>
+    <div id="header">
+        <div class="header-logo">
+             <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <div class="header-name">
+            <h3>Trường Tiểu học Tương lai</h3>
+        </div>
+    </div>
+    <div class="clear"></div>
+    <div id="content">
 
+    </div>
+    <div class="clear"></div>
+    <div id="footer">
+
+    </div>
 </body>
 
 </html>
