xong header footer trang gioi thieu truong

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
         <div class="header-name">
             <h3>Trường Tiểu học Tương lai</h3>
         </div>
+        <div class="header-menu">
+            <ul>
+                <li><a href="">Về chúng tôi</a></li>
+                <li><a href="">Chương trình</a></li>
+                <li><a href="">Đội ngũ</a></li>
+                <li><a href="">Cơ sở vật chất</a></li>
+                <li><a href="">Liên hệ</a></li>
+            </ul>
+        </div>
+        <div class="button-dangnhap-header">
+            <input type="button" value="Đăng nhập">
+        </div>
     </div>
     <div class="clear"></div>
     <div id="content">
@@ -30,7 +42,15 @@
     </div>
     <div class="clear"></div>
     <div id="footer">
-
+        <div class="footer-logo">
+             <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+        </div>
+        <div class="footer-name">
+            <h5>© 2025 Trường Tiểu học Tương Lai. Tất cả quyền được bảo lưu.</h5>
+        </div>
+        <div class="button-dangnhap-footer">
+            <input type="button" value="Đăng nhập">
+        </div>
     </div>
 </body>
 
