lap trinh 1phan trang chu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <div id="header">
         <div class="header-logo">
-             <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="img/logo.png" alt="logo"></a>
         </div>
         <div class="header-name">
             <h3>Trường Tiểu học Tương lai</h3>
@@ -37,13 +37,172 @@
         </div>
     </div>
     <div class="clear"></div>
-    <div id="content">
 
+    <div id="content">
+        <div class="truongtieuhoctuonglai">
+            <div class="truongtieuhoctuonglai-left">
+                <div class="truongtieuhoctuonglai-left-text">
+                    <h1>Trường Tiểu học Tương Lai</h1>
+                    <p>Nơi xây nền móng tri thức vững chắc, phát triển toàn diện cho học sinh tiểu học từ lớp 1 đến lớp
+                        5. Với chương trình giáo dục hiện đại và đội ngũ giáo viên tâm huyết.</p>
+                </div>
+                <div class="clear"></div>
+                <br>
+                <div class="truongtieuhoctuonglai-left-buttons">
+                    <input type="button" value="Đăng nhập">
+                    <input id="button-timhieuthem" type="button" value="Tìm hiểu thêm">
+                </div>
+
+            </div>
+            <div class="truongtieuhoctuonglai-right">
+                <img src="img\truongtieuhoctuonglai.png" alt="anh_truongtieuhoctuonglai">
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="vetruongchungtoi">
+            <div class="vetruongchungtoi-top">
+                <h1>Về Trường Chúng Tôi</h1>
+                <p>Trường Tiểu học Tương Lai được thành lập với sứ mệnh mang đến nền giáo dục tiểu học chất lượng cao,
+                    phát triển toàn diện cho học sinh từ lớp 1 đến lớp 5.</p>
+            </div>
+            <div class="clear"></div>
+            <div class="vetruongchungtoi-bottom">
+                <div class="vetruongchungtoi-bottom-left">
+                    <div class="vetruongchungtoi-bottom-left-thing">
+                        <div class="vetruongchungtoi-bottom-left-thing-icon">
+                            <i class="fa-regular fa-heart"></i>
+                        </div>
+                        <div class="vetruongchungtoi-bottom-left-thing-text">
+                            <h4>Môi trường yêu thương</h4>
+                            <p>Quan tâm, chăm sóc và phát triển cảm xúc tích cực cho học sinh</p>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                    <div class="vetruongchungtoi-bottom-left-thing">
+                        <div class="vetruongchungtoi-bottom-left-thing-icon">
+                            <i class="fa-solid fa-book"></i>
+                        </div>
+                        <div class="vetruongchungtoi-bottom-left-thing-text">
+                            <h4>Chương trình chuẩn + nâng cao</h4>
+                            <p>Áp dụng chương trình Bộ Giáo dục kết hợp phương pháp giảng dạy tiên tiến</p>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                    <div class="vetruongchungtoi-bottom-left-thing">
+                        <div class="vetruongchungtoi-bottom-left-thing-icon">
+                            <i class="fa-regular fa-user"></i>
+                        </div>
+                        <div class="vetruongchungtoi-bottom-left-thing-text">
+                            <h4>Học tập hiệu quả</h4>
+                            <p>Sĩ số lớp vừa phải, tạo điều kiện giáo viên chú ý đến từng em</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="vetruongchungtoi-bottom-right">
+                    <img src="img\vetruongchungtoi.png" alt="anh_truongtieuhoctuonglai">
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="chuongtrinhgiaoduc">
+            <div class="chuongtrinhgiaoduc-top">
+                <h1>Chương Trình Giáo Dục</h1>
+                <p>Chương trình giáo dục toàn diện giúp phát triển trí tuệ, thể chất và kỹ năng sống của học sinh</p>
+            </div>
+            <div class="clear"></div>
+            <div class="chuongtrinhgiaoduc-content">
+                <div class="box">
+                    <i class="fa-solid fa-calculator"></i>
+                    <h3>Toán học</h3>
+                    <p>Xây dựng nền tảng toán học vững chắc và tư duy logic</p>
+                    <ul>
+                        <li>Số học và phép tính cơ bản</li>
+                        <li>Hình học trực quan</li>
+                        <li>Giải toán có lời văn</li>
+                        <li>Rèn luyện tư duy toán học</li>
+                    </ul>
+                </div>
+
+                <div class="box">
+                    <i class="fa-solid fa-earth-americas"></i>
+                    <h3>Tiếng Anh</h3>
+                    <p>Học tiếng Anh giao tiếp và nền tảng ngữ pháp</p>
+                    <ul>
+                        <li>Chương trình theo chuẩn quốc tế</li>
+                        <li>Luyện nghe - nói - đọc - viết</li>
+                        <li>Giao tiếp thực tế</li>
+                        <li>Giáo viên nước ngoài hỗ trợ</li>
+                    </ul>
+                </div>
+
+                <div class="box">
+                    <i class="fa-solid fa-palette"></i>
+                    <h3>Nghệ thuật sáng tạo</h3>
+                    <p>Phát triển khả năng sáng tạo và cảm thụ nghệ thuật</p>
+                    <ul>
+                        <li>Vẽ và làm đồ thủ công</li>
+                        <li>Âm nhạc và thanh nhạc</li>
+                        <li>Múa và biểu diễn</li>
+                    </ul>
+                </div>
+
+                <div class="box">
+                    <i class="fa-solid fa-gears"></i>
+                    <h3>Khoa học khám phá</h3>
+                    <p>Khuyến khích trẻ khám phá và tìm hiểu thế giới xung quanh</p>
+                    <ul>
+                        <li>Thí nghiệm khoa học đơn giản</li>
+                        <li>Quan sát thiên nhiên</li>
+                        <li>Trò chơi logic cơ bản</li>
+                    </ul>
+                </div>
+
+                <div class="box">
+                    <i class="fa-solid fa-heart"></i>
+                    <h3>Tiếng Việt</h3>
+                    <p>Phát triển kỹ năng đọc, viết và giao tiếp tiếng Việt</p>
+                    <ul>
+                        <li>Đọc - viết chính tả</li>
+                        <li>Tập làm văn sáng tạo</li>
+                        <li>Kể chuyện và trình bày</li>
+                    </ul>
+                </div>
+
+                <div class="box">
+                    <i class="fa-solid fa-music"></i>
+                    <h3>Vui chơi - Vận động</h3>
+                    <p>Các hoạt động thể chất và giải trí phong phú</p>
+                    <ul>
+                        <li>Thể dục buổi sáng</li>
+                        <li>Trò chơi dân gian</li>
+                        <li>Hoạt động ngoài trời</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="clear"></div>
+        <div class="doingugiaovien">
+
+        </div>
+        <div class="clear"></div>
+        <div class="cosovatchat">
+
+        </div>
+        <div class="clear"></div>
+        <div class="thanhtichnoibat">
+
+        </div>
+        <div class="clear"></div>
+        <div class="lienhechungtoi">
+
+        </div>
+        <div class="clear"></div>
     </div>
+
     <div class="clear"></div>
     <div id="footer">
         <div class="footer-logo">
-             <a href="index.html"><img src="img/logo.png" alt="logo"></a>
+            <a href="index.html"><img src="img/logo.png" alt="logo"></a>
         </div>
         <div class="footer-name">
             <h5>© 2025 Trường Tiểu học Tương Lai. Tất cả quyền được bảo lưu.</h5>
