xong trang gioi thieu truong

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
         <div class="header-menu">
             <ul>
-                <li><a href="">Về chúng tôi</a></li>
-                <li><a href="">Chương trình</a></li>
-                <li><a href="">Đội ngũ</a></li>
-                <li><a href="">Cơ sở vật chất</a></li>
-                <li><a href="">Liên hệ</a></li>
+                <li><a href="#Section1">Về chúng tôi</a></li>
+                <li><a href="#Section2">Chương trình</a></li>
+                <li><a href="#Section3">Đội ngũ</a></li>
+                <li><a href="#Section4">Cơ sở vật chất</a></li>
+                <li><a href="#Section6">Liên hệ</a></li>
             </ul>
         </div>
         <div class="button-dangnhap-header">
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="clear"></div>
-        <div class="vetruongchungtoi">
+        <div class="vetruongchungtoi" id="Section1">
             <div class="vetruongchungtoi-top">
                 <h1>Về Trường Chúng Tôi</h1>
                 <p>Trường Tiểu học Tương Lai được thành lập với sứ mệnh mang đến nền giáo dục tiểu học chất lượng cao,
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div class="clear"></div>
-        <div class="chuongtrinhgiaoduc">
+        <div class="chuongtrinhgiaoduc" id="Section2">
             <div class="chuongtrinhgiaoduc-top">
                 <h1>Chương Trình Giáo Dục</h1>
                 <p>Chương trình giáo dục toàn diện giúp phát triển trí tuệ, thể chất và kỹ năng sống của học sinh</p>
@@ -181,24 +181,185 @@
             </div>
         </div>
         <div class="clear"></div>
-        <div class="doingugiaovien">
+        <div class="doingugiaovien" id="Section3">
+            <div class="doingugiaovien-top">
+                <h1>Đội Ngũ Giáo Viên</h1>
+                <p>Đội ngũ giáo viên tâm huyết, giàu kinh nghiệm và được đào tạo bài bản về giáo dục tiểu học</p>
+            </div>
+            <div class="clear"></div>
+            <div class="doingugiaovien-bottom">
+                <div class="doingugiaovien-bottom-left">
+                    <div class="doingugiaovien-bottom-left-label">
+                        <label for="text">Chất lượng đào tạo</label>
+                    </div>
+                    <div class="clear"></div>
+                    <div class="doingugiaovien-bottom-left-text">
+                        <h4>Giáo viên chuyên nghiệp và tận tâm</h4>
+                        <p>100% giáo viên có bằng cử nhân sư phạm tiểu học, 90% có kinh nghiệm trên 5 năm và thường
+                            xuyên tham gia các khóa đào tạo nâng cao về phương pháp giảng dạy hiện đại.</p>
+                    </div>
+                    <div class="clear"></div>
+                    <div class="doingugiaovien-bottom-left-list">
+                        <ul>
+                            <li>Chuyên ngành sư phạm tiểu học</li>
+                            <li>Kinh nghiệm giảng dạy phong phú</li>
+                            <li>Tận tâm và hiểu tâm lý học sinh</li>
+                            <li>Thường xuyên đào tạo và cập nhật kiến thức</li>
+                        </ul>
+                    </div>
 
+                </div>
+                <div class="vetruongchungtoi-bottom-right">
+                    <img src="img\doingugiaovien.png" alt="anh_truongtieuhoctuonglai">
+                </div>
+            </div>
         </div>
         <div class="clear"></div>
-        <div class="cosovatchat">
-
+        <div class="cosovatchat" id="Section4">
+            <div class="cosovatchat-top">
+                <h1>Cơ Sở Vật Chất</h1>
+                <p>Môi trường học tập hiện đại, an toàn và phù hợp với sự phát triển của trẻ em</p>
+            </div>
+            <div class="clear"></div>
+            <div class="cosovatchat-bottom">
+                <div class="cosovatchat-bottom-left">
+                    <img src="img\cosovatchat.png" alt="anh_truongtieuhoctuonglai">
+                </div>
+                <div class="cosovatchat-bottom-right">
+                    <div class="cosovatchat-bottom-right-thing">
+                        <div class="cosovatchat-bottom-right-thing-icon">
+                            <i class="fa-solid fa-school"></i>
+                        </div>
+                        <div class="cosovatchat-bottom-right-thing-text">
+                            <h4>Phòng học hiện đại</h4>
+                            <p>Phòng học thoáng mát, bàn ghế chuẩn, trang bị bảng thông minh và máy chiếu</p>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                    <div class="cosovatchat-bottom-right-thing">
+                        <div class="cosovatchat-bottom-right-thing-icon">
+                            <i class="fa-solid fa-book-open"></i>
+                        </div>
+                        <div class="cosovatchat-bottom-right-thing-text">
+                            <h4>Thư viện truyện tranh</h4>
+                            <p>Thư viện với hàng nghìn đầu sách phù hợp học sinh tiểu học</p>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                    <div class="cosovatchat-bottom-right-thing">
+                        <div class="cosovatchat-bottom-right-thing-icon">
+                            <i class="fa-solid fa-volleyball"></i>
+                        </div>
+                        <div class="cosovatchat-bottom-right-thing-text">
+                            <h4>Sân chơi và khu thể thao</h4>
+                            <p>Sân bóng đá, sân cầu lông và các trang thiết bị thể thao đa dạng</p>
+                        </div>
+                    </div>
+                    <div class="cosovatchat-bottom-right-thing">
+                        <div class="cosovatchat-bottom-right-thing-icon">
+                            <i class="fa-solid fa-computer"></i>
+                        </div>
+                        <div class="cosovatchat-bottom-right-thing-text">
+                            <h4>Phòng máy tính</h4>
+                            <p>Phòng máy tính với thiết bị hiện đại, kết nối Internet tốc độ cao</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="clear"></div>
-        <div class="thanhtichnoibat">
+        <div class="thanhtichnoibat" id="Section5">
+            <div class="thanhtichnoibat-top">
+                <h1>Thành Tích Nổi Bật</h1>
+                <p>Những con số và giải thưởng khẳng định chất lượng giáo dục của trường</p>
+            </div>
+            <div class="clear"></div>
 
+            <div class="thanhtichnoibat-middle">
+                <div class="thanhtichnoibat-middle-item">
+                    <h2>15+</h2>
+                    <p>Năm kinh nghiệm</p>
+                </div>
+                <div class="thanhtichnoibat-middle-item">
+                    <h2>500+</h2>
+                    <p>Trẻ mầm non</p>
+                </div>
+                <div class="thanhtichnoibat-middle-item">
+                    <h2>35+</h2>
+                    <p>Cô giáo</p>
+                </div>
+                <div class="thanhtichnoibat-middle-item">
+                    <h2>98%</h2>
+                    <p>Hài lòng phụ huynh</p>
+                </div>
+            </div>
+            <div class="clear"></div>
+
+            <div class="thanhtichnoibat-bottom">
+                <div class="thanhtichnoibat-bottom-box">
+                    <i class="fa-solid fa-medal"></i>
+                    <h4>Trường chuẩn quốc gia</h4>
+                    <p>Đạt chuẩn trường tiểu học quốc gia mức độ 2 năm 2020</p>
+                </div>
+
+                <div class="thanhtichnoibat-bottom-box">
+                    <i class="fa-regular fa-star"></i>
+                    <h4>Top 5 trường xuất sắc</h4>
+                    <p>Xếp hạng top 5 trường tiểu học chất lượng cao thành phố</p>
+                </div>
+
+                <div class="thanhtichnoibat-bottom-box">
+                    <i class="fa-solid fa-user-graduate"></i>
+                    <h4>Thành tích học sinh</h4>
+                    <p>Nhiều giải thưởng học sinh giỏi cấp quận và thành phố</p>
+                </div>
+            </div>
         </div>
         <div class="clear"></div>
-        <div class="lienhechungtoi">
+        <div class="lienhechungtoi" id="Section6">
+            <div class="lienhechungtoi-top">
+                <h1>Liên Hệ Với Chúng Tôi</h1>
+                <p>Hãy liên hệ để được tư vấn về chương trình học và thăm quan trường</p>
+            </div>
 
+            <div class="lienhechungtoi-content">
+                <div class="lienhechungtoi-left">
+                    <h3>Thông tin liên hệ</h3>
+                    <p>Địa chỉ: 123 Đường ABC, Quận XYZ, TP. Hồ Chí Minh</p>
+                    <p>Số điện thoại: (028) 1234 5678</p>
+                    <p>Email: info@truongtuonglai.edu.vn</p>
+                    <p>Giờ mở cửa: Thứ 2 - Thứ 6: 7:00 - 17:00</p>
+                    <br>
+                    <h3>Giờ tiếp nhận hồ sơ</h3>
+                    <ul>
+                        <li>Thứ 2 - Thứ 6: 8:00 - 11:00 và 13:30 - 16:30</li>
+                        <li>Thứ 7: 8:00 - 11:00</li>
+                        <li>Chủ nhật: Nghỉ</li>
+                    </ul>
+                </div>
+
+                <div class="lienhechungtoi-right">
+                    <form>
+                        <h4>Đăng ký tham quan</h4>
+                        <p>Điền thông tin để được tư vấn và lên lịch tham quan trường</p>
+
+                        <label for="hoten">Họ và tên</label>
+                        <input type="text" id="hoten" placeholder="Nhập họ và tên">
+
+                        <label for="sdt">Số điện thoại</label>
+                        <input type="text" id="sdt" placeholder="Nhập số điện thoại">
+
+                        <label for="loinhan">Lời nhắn</label>
+                        <textarea id="loinhan" rows="4" placeholder="Nhập lời nhắn của bạn"></textarea>
+
+                        <button type="submit">Gửi yêu cầu</button>
+                    </form>
+                </div>
+            </div>
         </div>
         <div class="clear"></div>
     </div>
-
+    </div>
     <div class="clear"></div>
     <div id="footer">
         <div class="footer-logo">
