xong folder Xac Thuc

--- a/XacThuc/dangnhap.html
+++ b/XacThuc/dangnhap.html
@@ -1,37 +1,48 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đăng nhập - Trường mầm non hướng dương</title>
-    <!-- Link tới file CSS -->
-    <link rel="stylesheet" href="dangnhap.css">
+
+    <link rel="stylesheet" type="text/css" href="dangnhap.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="jquery-3.7.1.min.js"></script>
+    <script src="dangnhap.js"></script>
+
+    <title>Trường Tiểu học tương lai</title>
 </head>
 
 <body>
-    <div class="login-container">
-        <div class="logo">
-            <img src="https://img.icons8.com/color/48/000000/plant-under-sun.png" alt="logo">
+    <div class="dangnhap">
+        <div class="dangnhap-container">
+            <div class="dangnhap-top">
+                <h3>Hệ thống Quản lý trường Tiểu học</h3>
+                <p>Đăng nhập vào hệ thống</p>
+            </div>
+            <div class="dangnhap-form" id="loginForm">
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Nhập email">
+
+                <label for="matkhau">Mật khẩu</label>
+                <input type="password" id="matkhau" placeholder="Nhập mật khẩu">
+                <a href="quenMK.html" class="quenmatkhau">Quên mật khẩu</a>
+
+                <label for="vaitro">Vai trò</label>
+                <div class="select-wrapper">
+                    <select id="vaitro">
+                        <option value="admin">Quản trị viên</option>
+                        <option value="giaovien">Giáo viên</option>
+                        <option value="phuhuynh">Phụ huynh</option>
+                    </select>
+                </div>
+
+
+                <button class="dangnhap-button" type="submit">Đăng nhập</button>
+            </div>
         </div>
-        <h2>TRƯỜNG MẦM NON HƯỚNG DƯƠNG</h2>
-        <form>
-            <div class="form-group">
-                <input type="email" placeholder="Email">
-            </div>
-            <div class="form-group">
-                <input type="password" placeholder="Mật khẩu">
-            </div>
-            <div class="form-group">
-                <select>
-                    <option value="">Vai trò</option>
-                    <option value="admin">Quản trị viên</option>
-                    <option value="teacher">Giáo viên</option>
-                    <option value="parent">Phụ huynh</option>
-                </select>
-            </div>
-            <a href="#" class="forgot-password">Quên mật khẩu?</a>
-            <button type="submit" class="btn-login">Đăng nhập</button>
-        </form>
     </div>
 </body>
 
