--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </ul>
         </div>
         <div class="button-dangnhap-header">
-            <input type="button" value="Đăng nhập">
+            <a href="XacThuc/dangnhap.html"><input type="button" value="Đăng nhập"></a>
         </div>
     </div>
     <div class="clear"></div>
@@ -369,7 +369,7 @@
             <h5>© 2025 Trường Tiểu học Tương Lai. Tất cả quyền được bảo lưu.</h5>
         </div>
         <div class="button-dangnhap-footer">
-            <input type="button" value="Đăng nhập">
+            <a href="XacThuc/dangnhap.html"><input type="button" value="Đăng nhập"></a>
         </div>
     </div>
 </body>
