Thanh thong tin va menu

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -3,5 +3,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giáo Viên</title>
-    <link rel="stylesheet" href="../css/giaovien.css">
+    <link rel="stylesheet" href="/Giaovien/styleGV.css">
+</head>
+<body>
+    <div id="Thanhthongtin">
+        <div id="ThongTin">
+            <img src="/img/book.png" alt="logo">
+            <div>
+                <h4>Giáo Viên - Trần Thị B</h4>
+                <h5>Môn Toán • Chủ nhiệm lớp 6A</h5>
+            </div>
+        </div>
+        <div id="Thoat">
+            <button >
+                <img src="/img/logout (1).png" alt="">
+                Đăng xuất
+            </button>
+        </div>
+    </div>
+
+    <div id="menu">
+        <button id="btnTongQuan">Tổng quan</button>
+        <button id="btnDieDanh">Điểm danh</button>
+        <button id="btnSucKhoe">Sức khỏe</button>
+        <button id="btnDiemSo">Điểm số</button>
+        <button id="btnLienLac">Liên lạc</button>
+    </div>
+
+    <div id="TongQuan">
+        <div id="ThongSo"></div>
+        <div id="LopDay"></div>
+        <div id="HoatDong"></div>
+    </div>
+
+    <div id="DieDanh"></div>
+
+    <div id="SucKhoe"></div>
+
+    <div id="DiemSo"></div>
+
+    <div id="LienLac"></div>
+</body>
 </html>
