--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/Giaovien/styleGV.css">
 </head>
 <body>
+<!----------------- Thanh thông tin ------------------->
     <div id="Thanhthongtin">
         <div id="ThongTin">
             <img src="/img/book.png" alt="logo">
@@ -21,7 +22,7 @@
             </button>
         </div>
     </div>
-
+<!----------------- Mennu ------------------->
     <div id="menu">
         <button id="btnTongQuan">Tổng quan</button>
         <button id="btnDieDanh">Điểm danh</button>
@@ -29,13 +30,49 @@
         <button id="btnDiemSo">Điểm số</button>
         <button id="btnLienLac">Liên lạc</button>
     </div>
-
+<!----------------- tONG Quan ------------------->
     <div id="TongQuan">
-        <div id="ThongSo"></div>
+        <div id="ThongSo">
+            <div id="TongHS">
+                <h4>Tổng học sinh
+                    <img src="/img/people.png" alt="anh">
+                </h4>
+                <h2>50</h2>
+                <p>Trong các lớp dạy</p>
+            </div>
+            <div id="CoMat">
+                <h4>Có mặt hôm nay
+                    <img src="/img/checked.png" alt="anh">
+                </h4>
+                <h2>87</h2>
+                <p>96.7% tỷ lệ</p>
+            </div>
+            <div id="VangMat">
+                <h4>Vắng mặt
+                    <img src="/img/clock.png" alt="anh">
+                </h4>
+                <h2>3</h2>
+                <p>Học sinh nghỉ học</p>
+            </div>
+            <div id="DiMuon">
+                <h4>Đi muộn
+                    <img src="/img/clock.png" alt="anh">
+                </h4>
+                <h2>2</h2>
+                <p>Học sinh đến muộn</p>
+            </div>
+            <div id="ChoChamDiem">
+                <h4>Chờ chấm điểm
+                    <img src="/img/page.png" alt="anh">
+                </h4>
+                <h2>2</h2>
+                <p>Bài thi cần chấm</p>
+            </div>
+        </div>
         <div id="LopDay"></div>
         <div id="HoatDong"></div>
     </div>
-
+<!-----------------Diem Danh------------------->
     <div id="DieDanh"></div>
 
     <div id="SucKhoe"></div>
